--- a/public/index.html
+++ b/public/index.html
@@ -86,6 +86,7 @@
 <script src="lib/angular-ui-ace/ui-ace.js"></script>
 <script src="lib/ace-builds/src-noconflict/ace.js"></script>
 <script src="lib/angular-dragdrop-ganarajpr/draganddrop.js"></script>
+<script src="lib/node-uuid/uuid.js"></script>
 <!-- <script src="lib/jpreloader/js/jpreloader.js"></script> -->
 <!-- <script src="assets/javascripts/loop.js"></script> -->
 <!-- endbuild -->
