--- a/public/angular/directives/flow/flow-node-palette/flow-node-palette.html
+++ b/public/angular/directives/flow/flow-node-palette/flow-node-palette.html
@@ -10,7 +10,7 @@
                 <span>{{category}}</span>
             </div>
             <div ng-hide="hideCategory" class="palette-content">
-                <div ng-repeat="flowNodeType in flowNodeTypes | filter: paletteFilter" ui-draggable="true" drag="flowNodeType" class="palette_node" ng-include="'/angular/directives/flow/flow-node-palette/flow-node-templates/default.svg'"></div>
+                <div ng-repeat="flowNodeType in flowNodeTypes | filter: paletteFilter" ui-draggable="true" drag="flowNodeType" class="palette_node" ng-include="'/angular/directives/flow/flow-node-palette/flow-node-templates/default.html'"></div>
             </div>
         </div>
     </div>
