Adding classes and templates for nodes

--- a/public/assets/node_forms/template_form.html
+++ b/public/assets/node_forms/template_form.html
@@ -5,5 +5,5 @@
 
 <div class="form-group">
     <label for="template">Template</label>
-    <div ui-ace="{mode: 'handlebars', theme: 'chrome'}" class="code-editor" ng-model="flowEditor.editorNode.template"></div>
+    <div id="template" ui-ace="{mode: 'handlebars', theme: 'chrome'}" class="code-editor" ng-model="flowEditor.editorNode.template"></div>
 </div>
