Fix typo in sentiment form

--- a/public/assets/node_forms/sentiment_form.html
+++ b/public/assets/node_forms/sentiment_form.html
@@ -4,9 +4,7 @@
 </div>
 
 <div class="form-group">
-   <div class="col-xs-12">
-       <p class="form-control-static lead">
-           Adds <strong>msg.sentiment.score</strong> as the anaylsis result.
-       </p>
-   </div>
+  <p class="form-control-static text-info">
+     Adds <strong>msg.sentiment.score</strong> as the analysis result.
+  </p>
 </div>
