Fix dropdown on flow editor

--- a/public/pages/flow.html
+++ b/public/pages/flow.html
@@ -5,8 +5,8 @@
 
     <div class="page-header">
         <div class="btn-group">
-            <div class="btn-group dropdown-container">
-                <button class="dropdown-toggle btn btn-lg btn-default" data-toggle="dropdown">
+            <div class="btn-group" dropdown>
+                <button class="dropdown-toggle btn btn-lg btn-default">
                     <i class="fa fa-align-justify"></i> <span class="caret"></span>
                 </button>
                 <ul class="dropdown-menu">
