--- a/public/pages/node-wizard/add-channel/basic.html
+++ b/public/pages/node-wizard/add-channel/basic.html
@@ -3,13 +3,13 @@
     <form class="form" ng-submit="activate()">
       <div class="form-group" ng-class="{'has-error': errorMessage}">
         <label for="api-key" class="control-label">User</label>
-        <input type="text" ng-model="newChannel.key" class="form-control input-lg" id="api-key" required>
+        <input type="text" ng-model="newChannel.user" class="form-control input-lg" id="api-key" required>
         <p class="help-block" ng-if="errorMessage">{{errorMessage}}</p>
       </div>
 
       <div class="form-group" ng-class="{'has-error': errorMessage}">
         <label for="api-key" class="control-label">Password</label>
-        <input type="text" ng-model="newChannel.token" class="form-control input-lg" id="api-key" required>
+        <input type="text" ng-model="newChannel.pass" class="form-control input-lg" id="api-key" required>
         <p class="help-block" ng-if="errorMessage">{{errorMessage}}</p>
       </div>
 
