Draw wires and stuff

--- a/public/angular/directives/switch-rules/switch-rules.html
+++ b/public/angular/directives/switch-rules/switch-rules.html
@@ -3,7 +3,7 @@
     Rules
   </h4>
 
-  <div ng-repeat="rule in rules">
+  <div ng-repeat="rule in node.rules">
     <div class="form-group">
       <div class="row">
         <div class="col-xs-10">
