--- a/public/assets/node_forms/switch_form.html
+++ b/public/assets/node_forms/switch_form.html
@@ -9,7 +9,7 @@
     <input  id="property" ng-model="flowEditor.editorNode.property" type="text" class="form-control" required>
   </div>
 
-  <switch-rules ng-model="flowEditor.editorNode.rules">
+  <switch-rules ng-model="flowEditor.editorNode">
 
   <div class="checkbox">
     <label>
