--- a/public/pages/flow.html
+++ b/public/pages/flow.html
@@ -51,6 +51,7 @@
                         <span class="red-tab-label">{{flow.name}}</span>
                     </li>
                 </ul>
+                <div class="red-add-tab" ng-click="deleteSelection()"><i class="fa fa-trash-o"></i></div>
                 <div class="red-add-tab" ng-click="addFlow()"><i class="fa fa-plus"></i></div>
             </div>
             <flow-editor flow="activeFlow" selected-node="flowEditor.selectedNode"></flow-editor>
