--- a/public/pages/flow.html
+++ b/public/pages/flow.html
@@ -54,7 +54,7 @@
                 <div class="red-add-tab" ng-click="deleteSelection()"><i class="fa fa-trash-o"></i></div>
                 <div class="red-add-tab" ng-click="addFlow()"><i class="fa fa-plus"></i></div>
             </div>
-            <flow-editor flow="activeFlow" selected-node="flowEditor.selectedNode"></flow-editor>
+            <flow-editor flow="activeFlow" selected-node="flowEditor.selectedNode" selected-link="flowEditor.selectedLink"></flow-editor>
         </div>
 
         <div id="sidebar" class="edit-panel" ng-controller="flowNodeEditorController" ng-show="flowEditor.selectedNode">
