--- a/public/pages/analyze.html
+++ b/public/pages/analyze.html
@@ -15,8 +15,8 @@ COMMENTED OUT FOR WHITESPACE
         <span>Analyze</span>
     </h1>
 
-	<tabset>
-	<tab heading="Overview">
+<tabset>
+<tab heading="Overview">
 	<div class="container-fluid">
         <div class="row">
             <div class="form-group col-md-12">
@@ -51,23 +51,23 @@ COMMENTED OUT FOR WHITESPACE
                 </div></div>
             </div>
         </div></div>
-	</tab>
+</tab>
 <tab heading="Explore">
     <div class="container-fluid">
 	  <div ng-switch="!!ExploreIsCollapsed ? 1 : 0" ng-click="ExploreIsCollapsed = !ExploreIsCollapsed">
                                 <div ng-switch-when="0" style="font-size: 1.5em;"><i class="fa fa-caret-square-o-up fa-3"></i> Explore Options</div>
                                 <div ng-switch-default style="font-size: 1.5em;"><i  class="fa fa-caret-square-o-down fa-3"></i> Explore Options</div>
           </div>
-	  <div collapse="ExploreIsCollapsed">
+	  <div collapse="ExploreIsCollapsed" style="height:400px">
             <form novalidate>
-                <div class="col-md-4 dashboard-panel">
-                    <div class="panel-heading">
+                <div class="col-md-4 dashboard-panel" style="height:400px">
+                    <div class="panel-heading" style="height:60px">
                         <h3 class="panel-title">Device Selection</h3>
                         <span><kbd>ctrl+click</kbd> for multiple</span>
                     </div>
-                    <div class="panel ">
+                    <div class="panel" style="height:340px;">
                         <a href="">
-                            <div class="panel-body">
+                            <div class="panel-body" style="height:310px;">
                                 <select class="form-control" size=10 style="height:100%" multiple
                                         ng-model="forms.EX_graphDevices">
                                     <option value="all" selected="selected">All Devices</option>
@@ -79,7 +79,7 @@ COMMENTED OUT FOR WHITESPACE
                         </a>
                     </div>
                 </div>
-                <div class="col-md-8 dashboard-panel">
+                <div class="col-md-8 dashboard-panel" style="height:400px">
                     <div class="row">
                         <div class="col-md-4 dashboard-panel">
                             <div class="panel-heading">
@@ -120,25 +120,17 @@ COMMENTED OUT FOR WHITESPACE
                             </div>
                             <div class="panel">
                                 <table class="table table-hover">
-                                    <tr>
-                                        <td>Different Event Codes:</td>
-                                        <td>{{leg.dcEC}}</td>
-                                    </tr>
-                                    <tr>
-                                        <td>Total Events Returned:</td>
-                                        <td>{{leg.total}}</td>
-                                    </tr>
-                                    <tr>
-                                        <td>Different UUIDs:</td>
-                                        <td>{{leg.dcUUIDs}}</td>
-                                    </tr>
+                                    <tr ng-repeat="row in leg.stats"><td>{{row.title}}:</td><td>{{row.value}}</td></tr>
                                 </table>
                                 <div class="form-group col-md-2 text-center">
 				<span class="input-group-btn">
                                           <button class="btn btn-default" type="button" ng-click="loadExploreGraph()">
                                               <span class="fa fa-search"> Find</span>
                                           </button>
-                                      </span>
+                                </span>
+				 <div ng-switch="!!leg.isLoading ? 0 : 1">
+   					 <div ng-switch-when="0"><h1><i class="fa fa-cog fa-spin"></i></h1></div>
+				 </div>
                                 </div>
                             </div>
                         </div>
@@ -160,7 +152,7 @@ COMMENTED OUT FOR WHITESPACE
 		</div>	
 	</div>-->
   <div ng-switch="!!leg.panels ? 1 : 0">
-    <div ng-switch-when="0"><h1><i class="fa fa-cog fa-spin"></i></h1></div>
+    <div ng-switch-when="0"></div>
     <div ng-switch-default>
 	<div ng-switch="!!leg.panels.ecot.isCollapsed ? 1 : 0" ng-click="leg.panels.ecot.isCollapsed = !leg.panels.ecot.isCollapsed">
                                 <div ng-switch-when="0" style="font-size: 1.5em;"><i class="fa fa-caret-square-o-up fa-3"></i> {{leg.panels.ecot.title}}</div>
