Dynamic Explore Graphs from controller complete. Extend functionality by adding more switch statements for graph types as needed. Fixed the Render issue with first time load pie charts in lower scopes

--- a/public/pages/analyze.html
+++ b/public/pages/analyze.html
@@ -45,7 +45,7 @@ COMMENTED OUT FOR WHITESPACE
                             <div ng-switch="!!panel.results.length ? 1 : 0">
                                 <div ng-switch-when="0"><h1><i class="fa fa-cog fa-spin"></i></h1></div>
                                 <div ng-switch-default>
-                                    <div nvd3-pie-chart objectequality="false" donut="true"  data="panel.results" id="panel.id" height="300"></div>
+                                    <div nvd3-pie-chart donut="true"  data="panel.results" id="panel.id" height="300"></div>
 				</div>
                             </div>
                 </div></div>
@@ -139,59 +139,37 @@ COMMENTED OUT FOR WHITESPACE
             </form>
 	  </div> <!--end Collapse Section -->
         <!-- end Choices Div Row -->
-	<!--Experimental
-	<div class="row" style='height:400px' ng-repeat="panel in leg.panels">
-		<div class="col-lg-12 dashboard-panel">
-			<div class="panel-heading"><h3 class="panel-title">{{panel.title}}</h3></div>
-			<div class="panel panel-default"><div class="panel-body">
-			<div ng-switch="!!panel.data ? 1: 0">
-				<div ng-switch-when="0"><h1><i class="fa fa-cog fa-spin"></i></h1></div>
-				<div ng-switch-default><div nvd3-ng-repeat graph="panel.graph" graphoptions="panel.graph_options" data="panel.data" height="400"></div></div>
-			</div>
-			</div></div>
-		</div>	
-	</div>-->
   <div ng-switch="!!leg.panels ? 1 : 0">
     <div ng-switch-when="0"></div>
     <div ng-switch-default>
-	<div ng-switch="!!leg.panels.ecot.isCollapsed ? 1 : 0" ng-click="leg.panels.ecot.isCollapsed = !leg.panels.ecot.isCollapsed">
-                                <div ng-switch-when="0" style="font-size: 1.5em;"><i class="fa fa-caret-square-o-up fa-3"></i> {{leg.panels.ecot.title}}</div>
-                                <div ng-switch-default style="font-size: 1.5em;"><i  class="fa fa-caret-square-o-down fa-3"></i> {{leg.panels.ecot.title}}</div>
-          </div>
-        <div class="row" style='height:400px' collapse="leg.panels.ecot.isCollapsed">
-            <div class="col-lg-12 dashboard-panel">
-                <div class="panel panel-default">
-                    <div class="panel-body">
-                        <div ng-switch="!!leg ? 1 : 0">
-                            <div ng-switch-when="0"><h1><i class="fa fa-cog fa-spin"></i></h1></div>
-                            <div ng-switch-default>
-                                <div nvd3-line-with-focus-chart show-legend="True" axis-x-label="{{leg.myInterval}}" axis-x-type="date"
-                                     axis-x-format="%-m/%-d %H:%M" data="leg.panels.ecot.data" height="400" ></div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+	<div class="row" style='height:400px;'>
+		<div ng-repeat="myPanel in leg.panels">
+			<div ng-switch="!!myPanel.isCollapsed ? 1: 0" ng-click="myPanel.isCollapsed = !myPanel.isCollapsed">
+				<div ng-switch-when="0" style="font-size: 1.5em;"><i class="fa fa-caret-square-o-up fa-3"></i> {{myPanel.title}}</div>
+                                <div ng-switch-default style="font-size: 1.5em;"><i  class="fa fa-caret-square-o-down fa-3"></i> {{myPanel.title}}</div>
+			</div>
+			<div class="row" style='height:400px' collapse="myPanel.isCollapsed">
+				<div class="col-lg-12 dashboard-panel">
+        			        <div class="panel panel-default">
+			                    <div class="panel-body">
+			                        <div ng-switch="!!myPanel.graph ? myPanel.graph : myPanel.graph">
+			                            <div ng-switch-when="nvd3-line-with-focus-chart">
+							<div nvd3-line-with-focus-chart data="myPanel.data" height="400" show-legend="{{myPanel.showLegend}}" axis-x-label="{{myPanel.axisXLabel}}" axis-x-type="{{myPanel.axisXType}}" axis-x-format="{{myPanel.axisXFormat}}"></div>
+						    </div>
+						    <div ng-switch-when="nvd3-multibar-chart">
+							<div nvd3-multibar-chart data="myPanel.data" height="400" show-legend="{{myPanel.showLegend}}" axis-x-label="{{myPanel.axisXLabel}}"></div>
+						    </div>
+			                            <div ng-switch-default>
+			                                <div height="400"><h3 class="warning">Chart Type: {{myPanel.graph}} Not Defined in Switch</h3></div>
+			                            </div>
+			                        </div>
+			                    </div>
+			                </div>
+		            	</div>
+			</div>
+		</div>
 	</div>
-	<div ng-switch="!!leg.panels.ec_by_uuid.isCollapsed ? 1 : 0" ng-click="leg.panels.ec_by_uuid.isCollapsed = !leg.panels.ec_by_uuid.isCollapsed">
-                                <div ng-switch-when="0" style="font-size: 1.5em;"><i class="fa fa-caret-square-o-up fa-3"></i> {{leg.panels.ec_by_uuid.title}}</div>
-                                <div ng-switch-default style="font-size: 1.5em;"><i  class="fa fa-caret-square-o-down fa-3"></i> {{leg.panels.ec_by_uuid.title}}</div>
-          </div>
-	<div class="row" style='height:400px' collapse="leg.panels.ec_by_uuid.isCollapsed">
-            <div class="col-lg-12 dashboard-panel">
-                <div class="panel panel-default">
-                    <div class="panel-body">
-                        <div ng-switch="!!leg ? 1 : 0">
-                            <div ng-switch-when="0"><h1><i class="fa fa-cog fa-spin"></i></h1></div>
-                            <div ng-switch-default>
-                                <div nvd3-multibar-chart show-legend="True" axis-x-label="Event Code"  
-                                     data="leg.panels.ec_by_uuid.data" height="400"></div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div><!--- END OF GRAPH ROW -->
+	<!--- END OF GRAPH ROW -->
     </div><!-- End Default Ng-Switch -->
    </div><!-- End Ng-Switch -->
 </div>
