--- a/public/pages/flow.html
+++ b/public/pages/flow.html
@@ -63,6 +63,11 @@
                 <div class="panel-body">
                     <form ng-submit="updateNode()" class="form">
                         <div ng-include="flowEditor.flowNodeType.formTemplatePath"></div>
+                        <div class="form-group">
+                            <label for="debug-node">Debug</label>
+                            <input  id="debug-node" class="form-control" type="checkbox"
+                                    ng-model="flowEditor.editorNode.debug">
+                        </div>
                         <button type="submit" class="btn btn-lg btn-block btn-primary">Update Node</button>
                     </form>
                 </div>
