--- a/public/index.html
+++ b/public/index.html
@@ -66,6 +66,7 @@
 <script src="lib/angular-cookies/angular-cookies.js"></script>
 <script src="lib/angular-resource/angular-resource.js"></script>
 <script src="lib/lodash/dist/lodash.js"></script>
+<script src="lib/async/lib/async.js"></script>
 <script src="lib/d3/d3.js"></script>
 <script src="lib/nvd3/nv.d3.js"></script>
 <!--<script src="lib/angularjs-nvd3-directives/dist/angularjs-nvd3-directives.js"></script>-->
