re-added custom channel remote param option

--- a/public/pages/connector/channels/editor.html
+++ b/public/pages/connector/channels/editor.html
@@ -256,7 +256,7 @@
                 <label>Required</label>
               </div>
               &nbsp;&nbsp;
-              <a href ng-click="removeParam($index)"> <i class="icon-minus"></i></a>
+              <a href ng-click="removeParam($index)"> <i class="glyphicon glyphicon-minus" style="font-size:2em"></i></a>
 
             </div>
 
