--- a/public/assets/node_forms/channel_form.html
+++ b/public/assets/node_forms/channel_form.html
@@ -14,4 +14,18 @@
     <label for="{{param.name}}">{{param.name}}</label>
     <input  id="{{param.name}}" type="text" class="form-control" ng-model="flowEditor.editorNode.params[param.name]">
   </div>
+
+
+  <div class="form-group">
+    <label for="something">Query Parameters</label>
+
+    <div class="row">
+      <div class="col-xs-6">
+        <input  id="something" type="text" class="form-control" placeholder="Key">
+      </div>
+      <div class="col-xs-6">
+        <input  id="something" type="text" class="form-control" placeholder="Value">
+      </div>
+    </div>
+  </div>
 </div>
