--- a/public/index.html
+++ b/public/index.html
@@ -20,12 +20,10 @@
 
     <link href="assets/stylesheets/style.css" rel="stylesheet" media="screen">
     <link href="assets/stylesheets/animation.css" rel="stylesheet">
-    <link rel="stylesheet" href="/assets/stylesheets/dist/styles.css" type="text/css"/>
-    <link rel="stylesheet" href="/lib/fontawesome/css/font-awesome.css" type="text/css"/>
+    <link href="/assets/stylesheets/dist/styles.css" rel="stylesheet" type="text/css"/>
+    <link href="/lib/fontawesome/css/font-awesome.css" rel="stylesheet" type="text/css"/>
     <link href="/lib/nvd3/nv.d3.css" rel="stylesheet"/>
 
-    <script src="assets/javascripts/skynet.bundle.js"></script>
-    <!--<script src="assets/javascripts/skynet.js"></script>-->
 
     <style type="text/css">
         .reveal-animation.ng-enter {
@@ -52,6 +50,7 @@
 
 <footer></footer>
 
+<script src="/assets/javascripts/skynet.bundle.js"></script>
 <script src="/assets/javascripts/dist/dependencies.js"></script>
 <script src="/assets/javascripts/dist/application.js"></script>
 <script src="/assets/design/orion/built-editor.min.js"></script>
