--- a/public/pages/flow.html
+++ b/public/pages/flow.html
@@ -41,7 +41,7 @@
         </div>
     </div>
 
-    <div id="main-container" class="main-container" ng-mousemove="setMousePosition($event)">
+    <div id="main-container" class="main-container" ng-mousemove="setMousePosition($event)" ng-mouseout="clearMousePosition()">
         <flow-node-palette flow-node-types="flowNodeTypes"></flow-node-palette>
         <div class="workspace-container">
             <div class="red-tabs-container">
