--- a/public/pages/api_editor.html
+++ b/public/pages/api_editor.html
@@ -201,7 +201,7 @@
                 <select class="form-control" ng-model="param.type" ng-options="a for a in ['string', 'number', 'boolean']"></select>
               </div>
               <div class="form-group">
-                <select class="form-control" ng-model="param.style" ng-options="a for a in ['query', 'header', 'body']"></select>
+                <select class="form-control" ng-model="param.style" ng-options="a for a in ['query', 'header', 'body', 'url']"></select>
               </div>
               <div class="form-control">
                 <input type="checkbox" class="" ng-model="param.required" ng-true-value="true" ng-false-value="false">
