--- a/public/pages/endpoint_selector.html
+++ b/public/pages/endpoint_selector.html
@@ -4,6 +4,11 @@
     <select id="selectedEndpoint" ng-model="selectedEndpoint" ng-options="getEndpointLabel(endpoint) for endpoint in node.application.resources" class="form-control"></select>
   </div>
 
+  <div class="form-group" ng-repeat="(key, value) in node.urlParams">
+    <label for="{{key}}">{{key}}</label>
+    <input  id="{{key}}" type="text" class="form-control" ng-model="node.urlParams[key]">
+  </div>
+
   <div class="form-group" ng-repeat="(key, value) in node.queryParams">
     <label for="{{key}}">{{key}}</label>
     <input  id="{{key}}" type="text" class="form-control" ng-model="node.queryParams[key]">
